# TestTracing

./: Makefile  README.md
tracing_c/: CMakeLists.txt  main.c
tracing_c/include/: rust_lib.h
tracing_c/tests/: CMakeLists.txt
tracing_c/tests/basic_tracing/: CMakeLists.txt  main.c
tracing_c/tests/file_tracing/: CMakeLists.txt  main.c
tracing_c/tests/no_tracing/: CMakeLists.txt  main.c
tracing_rust/: .gitignore  Cargo.toml
tracing_rust/src/: lib.rs  main.rs
