[package]
name = "tracing_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "dylib"]

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
test-log = { version = "0.2.13", default-features = false, features = [
    "trace",
] }
